fix(Style): fix content overflowing viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ p {
 body {
   position: relative;
 	background-color: #fdfdfd;
-	margin: 0;
+  margin: 0;
 }
 
 ul,
@@ -155,6 +155,7 @@ nav h1 a {
   width: 100%;
   background-color: #3397db;
   text-align: center;
+  box-sizing: border-box;
   border: 2px solid lightgrey;
 }
 
@@ -334,10 +335,7 @@ nav h1 a {
 
 @media screen and (min-width: 769px) {
 
-  #restaurants-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
+  #restaurants-list,
   #reviews-list {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -353,10 +351,7 @@ nav h1 a {
 
 @media screen and (min-width: 1280px) {
 
-  #restaurants-list {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
+  #restaurants-list,
   #reviews-list {
     grid-template-columns: repeat(3, 1fr);
   }
